Fix navbar collapse, top margin, button spacing, activeContentWarningSetup

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -29,7 +29,7 @@
   overflow-x: hidden;
 }
 [role=region] > header {
-  margin: .5rem 0 1rem 0;
+  margin-bottom: 1rem;
   text-align: center;
 }
 [role=region] > header > h1 {
@@ -181,6 +181,11 @@
 
 .btn-lg {
     color: #337ab7;
+}
+
+/* Add missing margin to buttons */
+button {
+    margin: 2px;
 }
 
 @keyframes spin {
